Song loading now uses ArrayBuffers. Edited Howler to directly use an ArrayBuffer instead of downloading with a url. Fix rows being selected when long held on mobile

--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -297,6 +297,9 @@ dt::after {
   content: ": ";
 }
 
+#Playlist_Viewer {
+    user-select: none;
+}
 .mainTable {
     position: absolute;
     border: 1px solid black;
